--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
         <module>Chapter6</module>
         <module>Chapter9</module>
         <module>Chapter10</module>
+        <module>Chapter11</module>
     </modules>
 </project>
